--- a/pro/dv2520/dv2520.vcxproj
+++ b/pro/dv2520/dv2520.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="..\..\src\dv2520\Buf.cpp" />
     <ClCompile Include="..\..\src\dv2520\BufSrv.cpp" />
     <ClCompile Include="..\..\src\dv2520\BufUav.cpp" />
+    <ClCompile Include="..\..\src\dv2520\Bvh.cc" />
     <ClCompile Include="..\..\src\dv2520\Cam.cpp" />
     <ClCompile Include="..\..\src\dv2520\Cb.cpp" />
     <ClCompile Include="..\..\src\dv2520\CogCb.cpp" />
@@ -106,6 +107,7 @@
     <ClCompile Include="..\..\src\dv2520\ExceptionDv2520.cpp" />
     <ClCompile Include="..\..\src\dv2520\Fx.cpp" />
     <ClCompile Include="..\..\src\dv2520\FxCs.cpp" />
+    <ClCompile Include="..\..\src\dv2520\geometry.cc" />
     <ClCompile Include="..\..\src\dv2520\Input.cpp" />
     <ClCompile Include="..\..\src\dv2520\InputQueue.cpp" />
     <ClCompile Include="..\..\src\dv2520\lbo.cc" />
@@ -129,6 +131,7 @@
     <ClInclude Include="..\..\src\dv2520\BufStream.h" />
     <ClInclude Include="..\..\src\dv2520\BufStreamSrv.h" />
     <ClInclude Include="..\..\src\dv2520\BufUav.h" />
+    <ClInclude Include="..\..\src\dv2520\Bvh.h" />
     <ClInclude Include="..\..\src\dv2520\Cam.h" />
     <ClInclude Include="..\..\src\dv2520\Cb.h" />
     <ClInclude Include="..\..\src\dv2520\Cbs.h" />
@@ -142,6 +145,7 @@
     <ClInclude Include="..\..\src\dv2520\ExceptionDv2520.h" />
     <ClInclude Include="..\..\src\dv2520\Fx.h" />
     <ClInclude Include="..\..\src\dv2520\FxCs.h" />
+    <ClInclude Include="..\..\src\dv2520\geometry.h" />
     <ClInclude Include="..\..\src\dv2520\Input.h" />
     <ClInclude Include="..\..\src\dv2520\InputQueue.h" />
     <ClInclude Include="..\..\src\dv2520\lbo.h" />
@@ -149,19 +153,15 @@
     <ClInclude Include="..\..\src\dv2520\lbo_ObjParser.h" />
     <ClInclude Include="..\..\src\dv2520\lbo_util.h" />
     <ClInclude Include="..\..\src\dv2520\lbo_vertex.h" />
-    <ClInclude Include="..\..\src\dv2520\Light.h" />
-    <ClInclude Include="..\..\src\dv2520\ObjInstance.h" />
-    <ClInclude Include="..\..\src\dv2520\Intersection.h" />
     <ClInclude Include="..\..\src\dv2520\MathSimple.h" />
     <ClInclude Include="..\..\src\dv2520\Obj.h" />
-    <ClInclude Include="..\..\src\dv2520\Ray.h" />
     <ClInclude Include="..\..\src\dv2520\Singleton.h" />
     <ClInclude Include="..\..\src\dv2520\stdafx.h" />
+    <ClInclude Include="..\..\src\dv2520\structs.h" />
     <ClInclude Include="..\..\src\dv2520\Timer.h" />
     <ClInclude Include="..\..\src\dv2520\TimerD3d.h" />
     <ClInclude Include="..\..\src\dv2520\TimerDelta.h" />
     <ClInclude Include="..\..\src\dv2520\Util.h" />
-    <ClInclude Include="..\..\src\dv2520\Vertex.h" />
     <ClInclude Include="..\..\src\dv2520\Win.h" />
   </ItemGroup>
   <ItemGroup>
@@ -221,6 +221,16 @@
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </EntryPointName>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Effect</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="..\..\fxs\ObjNode.fx">
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+      </EntryPointName>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Effect</ShaderType>
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+      </EntryPointName>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Effect</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
     </FxCompile>
     <FxCompile Include="..\..\fxs\Ray.fx">
