--- a/pro/dv2520/dv2520.vcxproj
+++ b/pro/dv2520/dv2520.vcxproj
@@ -106,6 +106,8 @@
     <ClCompile Include="..\..\src\dv2520\Dx.cpp" />
     <ClCompile Include="..\..\src\dv2520\Dv2520.cpp" />
     <ClCompile Include="..\..\src\dv2520\ExceptionDv2520.cpp" />
+    <ClCompile Include="..\..\src\dv2520\Fov.cc" />
+    <ClCompile Include="..\..\src\dv2520\FovTarget.cc" />
     <ClCompile Include="..\..\src\dv2520\Fx.cpp" />
     <ClCompile Include="..\..\src\dv2520\FxCs.cpp" />
     <ClCompile Include="..\..\src\dv2520\geometry.cc" />
@@ -145,6 +147,8 @@
     <ClInclude Include="..\..\src\dv2520\Dx.h" />
     <ClInclude Include="..\..\src\dv2520\Dv2520.h" />
     <ClInclude Include="..\..\src\dv2520\ExceptionDv2520.h" />
+    <ClInclude Include="..\..\src\dv2520\Fov.h" />
+    <ClInclude Include="..\..\src\dv2520\FovTarget.h" />
     <ClInclude Include="..\..\src\dv2520\Fx.h" />
     <ClInclude Include="..\..\src\dv2520\FxCs.h" />
     <ClInclude Include="..\..\src\dv2520\geometry.h" />
@@ -175,6 +179,12 @@
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </EntryPointName>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Effect</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="..\..\fxs\CsCombine.fx">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Compute</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
     </FxCompile>
     <FxCompile Include="..\..\fxs\CsLighting.fx">
