--- a/pro/dv2520/dv2520.vcxproj.filters
+++ b/pro/dv2520/dv2520.vcxproj.filters
@@ -79,6 +79,12 @@
     <ClCompile Include="..\..\src\dv2520\CogGeo.cc">
       <Filter>Dx</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\dv2520\Fov.cc">
+      <Filter>Dx</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\dv2520\FovTarget.cc">
+      <Filter>Dx</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\dv2520\stdafx.h" />
@@ -175,6 +181,12 @@
     <ClInclude Include="..\..\src\dv2520\CogGeo.h">
       <Filter>Dx</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\dv2520\Fov.h">
+      <Filter>Dx</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\dv2520\FovTarget.h">
+      <Filter>Dx</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Dx">
@@ -220,6 +232,9 @@
     </FxCompile>
     <FxCompile Include="..\..\fxs\structs.fx">
       <Filter>Fxs</Filter>
+    </FxCompile>
+    <FxCompile Include="..\..\fxs\CsCombine.fx">
+      <Filter>Fxs\Cs</Filter>
     </FxCompile>
   </ItemGroup>
 </Project>
