Added the Tobii EyeX C++ SDK to Visual Studio 2012 project solution.

--- a/pro/dv2520/dv2520.vcxproj
+++ b/pro/dv2520/dv2520.vcxproj
@@ -41,16 +41,16 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)..\bin\$(ProjectName)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\bin\$(ProjectName)\$(Configuration)\</IntDir>
-    <IncludePath>$(SolutionDir)..\lib\$(ProjectName)\DDSTextureLoader\include\;$(SolutionDir)..\lib\$(ProjectName)\AntTweakBar\include\;$(ProgramFiles)\Windows Kits\8.0\Include\um;$(ProgramFiles)\Windows Kits\8.0\Include\shared;$(SolutionDir)..\src\$(ProjectName)\;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProgramFiles)\Windows Kits\8.0\lib\win8\um\x86;$(SolutionDir)..\lib\$(ProjectName)\AntTweakBar\lib\;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)..\lib\$(ProjectName)\TobiiEyeXSdk-Cpp\include\;$(SolutionDir)..\lib\$(ProjectName)\DDSTextureLoader\include\;$(SolutionDir)..\lib\$(ProjectName)\AntTweakBar\include\;$(ProgramFiles)\Windows Kits\8.0\Include\um;$(ProgramFiles)\Windows Kits\8.0\Include\shared;$(SolutionDir)..\src\$(ProjectName)\;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)..\lib\$(ProjectName)\TobiiEyeXSdk-Cpp\lib\x86\;$(ProgramFiles)\Windows Kits\8.0\lib\win8\um\x86;$(SolutionDir)..\lib\$(ProjectName)\AntTweakBar\lib\;$(LibraryPath)</LibraryPath>
     <ExecutablePath>$(ExecutablePath)</ExecutablePath>
     <SourcePath>$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)..\bin\$(ProjectName)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)..\bin\$(ProjectName)\$(Configuration)\</IntDir>
-    <IncludePath>$(SolutionDir)..\lib\$(ProjectName)\DDSTextureLoader\include\;$(SolutionDir)..\lib\$(ProjectName)\AntTweakBar\include\;$(ProgramFiles)\Windows Kits\8.0\Include\um;$(ProgramFiles)\Windows Kits\8.0\Include\shared;$(SolutionDir)..\src\$(ProjectName)\;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProgramFiles)\Windows Kits\8.0\lib\win8\um\x86;$(SolutionDir)..\lib\$(ProjectName)\AntTweakBar\lib\;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)..\lib\$(ProjectName)\TobiiEyeXSdk-Cpp\include\;$(SolutionDir)..\lib\$(ProjectName)\DDSTextureLoader\include\;$(SolutionDir)..\lib\$(ProjectName)\AntTweakBar\include\;$(ProgramFiles)\Windows Kits\8.0\Include\um;$(ProgramFiles)\Windows Kits\8.0\Include\shared;$(SolutionDir)..\src\$(ProjectName)\;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)..\lib\$(ProjectName)\TobiiEyeXSdk-Cpp\lib\x86\;$(ProgramFiles)\Windows Kits\8.0\lib\win8\um\x86;$(SolutionDir)..\lib\$(ProjectName)\AntTweakBar\lib\;$(LibraryPath)</LibraryPath>
     <SourcePath>$(SourcePath)</SourcePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -67,7 +67,8 @@
       <Profile>true</Profile>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(SolutionDir)..\lib\$(ProjectName)\AntTweakBar\lib\AntTweakBar.dll" "$(SolutionDir)..\bin\$(ProjectName)\$(Configuration)\AntTweakBar.dll"</Command>
+      <Command>copy /Y "$(SolutionDir)..\lib\$(ProjectName)\AntTweakBar\lib\AntTweakBar.dll" "$(SolutionDir)..\bin\$(ProjectName)\$(Configuration)\AntTweakBar.dll"
+copy /b /y $(SolutionDir)..\lib\$(ProjectName)\TobiiEyeXSdk-Cpp\lib\x86\*.dll $(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -86,7 +87,8 @@
       <AdditionalDependencies>d3d11.lib;d3dcompiler.lib;DXGI.lib;AntTweakBar.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(SolutionDir)..\lib\$(ProjectName)\AntTweakBar\lib\AntTweakBar.dll" "$(SolutionDir)..\bin\$(ProjectName)\$(Configuration)\AntTweakBar.dll"</Command>
+      <Command>copy /Y "$(SolutionDir)..\lib\$(ProjectName)\AntTweakBar\lib\AntTweakBar.dll" "$(SolutionDir)..\bin\$(ProjectName)\$(Configuration)\AntTweakBar.dll"
+copy /b /y $(SolutionDir)..\lib\$(ProjectName)\TobiiEyeXSdk-Cpp\lib\x86\*.dll $(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -106,6 +108,7 @@
     <ClCompile Include="..\..\src\dv2520\CogTex.cpp" />
     <ClCompile Include="..\..\src\dv2520\Dx.cpp" />
     <ClCompile Include="..\..\src\dv2520\Dv2520.cpp" />
+    <ClCompile Include="..\..\src\dv2520\Et.cc" />
     <ClCompile Include="..\..\src\dv2520\ExceptionDv2520.cpp" />
     <ClCompile Include="..\..\src\dv2520\Fov.cc" />
     <ClCompile Include="..\..\src\dv2520\FovTarget.cc" />
@@ -147,6 +150,7 @@
     <ClInclude Include="..\..\src\dv2520\CogTex.h" />
     <ClInclude Include="..\..\src\dv2520\Dx.h" />
     <ClInclude Include="..\..\src\dv2520\Dv2520.h" />
+    <ClInclude Include="..\..\src\dv2520\Et.h" />
     <ClInclude Include="..\..\src\dv2520\ExceptionDv2520.h" />
     <ClInclude Include="..\..\src\dv2520\Fov.h" />
     <ClInclude Include="..\..\src\dv2520\FovTarget.h" />
